--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_my">MyActivity</string>
 
+    <string name="refresh">Refresh</string>
+
 </resources>
