--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_my">MyActivity</string>
-
     <string name="refresh">Refresh</string>
+    <string name="title_activity_detail">DetailActivity</string>
 
 </resources>
