split into a seperate Fragment. create a new Detail Fragment menu

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,6 @@
 
     <!-- Default city name for location preference -->
     <string name="pref_location_default" translatable="false">Yangon</string>
+
+    <string name="action_share">Share</string>
 </resources>
